@@ -1,3 +1,15 @@
+2012-12-05  Sancho Lerena <slerena@artica.es>
+
+	*  include/javascript/pandora.js: Added new javascript function
+	to open a generic URL with custom width / height.
+
+	* operation/agentes/snapshot_view.php: New feature for command
+	snapshot rendering.
+
+	* operation/agentes/datos_agente.php,
+	operation/agentes/estado_monitores.php: Changes for new feature
+	command snapshot monitoring.
+
 2012-12-05  Sergio Martin <sergio.martin@artica.es>
 
 	* include/functions_graph.php
